# hypotonic

./: .bumpversion.cfg  .gitignore  Pipfile  README.md  hypotonic.py  pyproject.toml  setup.cfg  setup.py  test.py  tests.py  utils.py
.github/workflows/: public-package.yml  publish-release.yml  run-tests.yml
.semaphore/: semaphore.yml
cassettes/: test_utf_8_is_canonicalized
hypotonic/: __init__.py  command.py  commands.py  context.py  html.py  request.py
tests/: test_hypotonic.py
tests/cassettes/: test_br_tags_become_newlines  test_get_with_params  test_non_standard_json_content_type  test_utf_8_is_canonicalized
