[tool.poetry]
name = "hypotonic"
version = "0.0.8"
description = "Fast asynchronous web scraper with minimalist API."
authors = ["Martin Scavnicky <martin.scavnicky@gmail.com>"]
license = "MIT"
homepage = "https://github.com/mscavnicky/hypotonic"
readme = "README.md"
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Operating System :: OS Independent',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Topic :: Text Processing :: Markup :: HTML'
]

[tool.poetry.dependencies]
python = "^3.6"
parsel = ">=1.2.0"
lxml = ">=4.1.1"
cssselect = ">=1.0.3"
aiohttp = ">=3.0.9"

[tool.poetry.dev-dependencies]
bumpversion = ">=0.5.0"
vcrpy = ">=3.0.0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"