[tool.poetry]
name = "hypotonic"
version = "v0.0.11"
description = "Fast asynchronous web scraper with minimalist API."
authors = ["Martin Scavnicky <martin.scavnicky@gmail.com>"]
license = "MIT"
homepage = "https://github.com/mscavnicky/hypotonic"
readme = "README.md"
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Operating System :: OS Independent',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Topic :: Text Processing :: Markup :: HTML'
]

[tool.poetry.dependencies]
python = "^3.6"
more_itertools = ">=6.0.0"
aiohttp = ">=3.0.9"
beautifulsoup4 = ">=4.7.1"
html5lib = ">=1.0.1"

[tool.poetry.dev-dependencies]
bumpversion = ">=0.5.0"
aiounittest = ">=1.4.0"
vcrpy = ">=3.0.0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"